# poc-tax

./: .env  .gitmodules  Cargo.toml  Dockerfile.dev  PERFORMANCE.md  README.md  build.rs  docker-compose.yml  schema.capnp
.agent/rules/: funcional.md  tecnico.md
.devcontainer/: devcontainer.json
client/java/: README.md  pom.xml  run-client.sh
client/java/tax-client/: generate-capnp.sh  pom.xml
client/java/tax-client/src/main/java/tax/: Client.java
client/java/tax-client/src/main/schema/: references.capnp
client/javascript/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
client/javascript/src/: client.ts  connection.ts
client/javascript/src/capnp/: references.capnp  references.d.ts  references.js  references.ts
docs/: codigo.md  componentes.md  contenedores.md  contexto.md
migrations/: 20251224_init.sql
src/: lib.rs  main.rs
src/app/: mod.rs  orchestrator.rs  resolver.rs  rpc.rs
src/domain/: calculators.rs  mod.rs  models.rs  traits.rs
src/infra/: cache.rs  db.rs
tests/: e2e_test.rs  integration_test.rs  load_test.rs
