[package]
name = "tax-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
capnp = "0.23.2"
capnp-rpc = "0.23.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
redis = { version = "1.0.1", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[build-dependencies]
capnpc = "0.23.3"

[dev-dependencies]
mockall = "0.14.0"
once_cell = "1.21.3"
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres", "redis"] }
