[package]
name = "tax-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tax-manager"
path = "src/main.rs"

[[bin]]
name = "load-test"
path = "src/bin/load_test.rs"

[dependencies]
anyhow = "~1.0"
async-trait = "~0.1"
capnp = "~0.24"
capnp-rpc = "~0.24"
chrono = { version = "~0.4", features = ["serde"] }
dotenvy = "~0.15"
futures-util = "~0.3"
goose = "~0.18"
num_cpus = "~1.17"
redis = { version = "~1.0", features = ["aio", "tokio-comp"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
sqlx = { version = "~0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "~1.48", features = ["full"] }
tokio-util = { version = "~0.7", features = ["compat"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }

[build-dependencies]
capnpc = "~0.24"

[dev-dependencies]
mockall = "~0.14"
once_cell = "~1.21"
testcontainers = "~0.26"
testcontainers-modules = { version = "~0.14", features = ["postgres", "redis"] }

